k8s/shanghai/base-pre/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytestapp-pre
  namespace: shpre
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mytestapp-pre
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mytestapp-pre
        version: v1
    spec:
      imagePullSecrets:
        - name: registry-ali-hangzhou
      containers:
        - image: >-
            crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/atom-pre/mytestapp-pre:20251027184459
          imagePullPolicy: IfNotPresent
          env:
            - name: NACOS_ENABLE
              value: "true"
            - name: APP_PROFILE
              value: pre
            - name: aliyun_logs_mytestapp-pre
              value: stdout
            - name: ENVIRONMENT
              value: pre
            - name: NACOS_ENDPOINT
              value: 'mse-e3004940-nacos-ans.mse.aliyuncs.com:8848'
            - name: NACOS_NAMESPACE
              value: 'd54b78a4-4350-41dc-9502-5d6d2e769755'
            - name: SITE
              value: cn
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
          name: mytestapp-pre
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "100m"
              memory: "32Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
