k8s/shanghai/base-pre/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shpre
  name: table-search-pre-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp80
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: table-search-pre
    version: v1
  sessionAffinity: None
  type: ClusterIP
